# novembeat.com

./: .gitignore  Pipfile  README.md  app.py  deploy.sh  pyproject.toml  run.sh  setup.sh  users.cfg
.github/ISSUE_TEMPLATE/: submit-a-work.md
asset-source/: favicon.pxm  logo-bg.afdesign  logo-small.afdesign  logo-small.afdesign~lock~
content/: _.cat  _link-discord.md  about.md  rules.md
content/faq/: 1 how do i participate.md  1.5 discord.md  2 song length.md  2 what are the rules.md  2.5 I don't make beats.md  3 what do i get for participating.md  3.5 new to music.md  3.6 ai.md  4 prompts.md  5 history.md  5 why you make site.md  6 hosting.md  6 how to get featured.md  6.5 hosting.md  6.5 how to get featured.md  6.5 not soundcloud.md  7 other times.md  8 other hashtags.md  9 website issue.md  999 responsible party.md  999 who to blame.md  _.cat
content/prompts/: 2019.md  2020.md  2021.md  2022.md  2023.md  2024.md  2025.md  _.cat
content/works/: 2016 delta charlie.md  2016 fluffy.md  2016 jjbbllkk.md  2016 jneen.md  2016 pts.md  2017 alfie pates.md  2017 armistice.md  2017 bvalosek.md  2017 fluffy.md  2017 jneen.md  2017 marc enciso.md  2017 uj.md  2018 fluffy.md  2018 gbhorsnell.md  2018 pts.md  2019 aria.md  2019 brandon valosek.md  2019 fluffy.md  2019 grant horsnell.md  2019 hazel.md  2019 litui.md  2019 narcanthe.md  2019 passerine.md  2019 rc major.md  2019 sam douglass.md  2019 the spiders.md  2019 vom vorton.md  (+42 more)
static/: submit.js
templates/: _webmention.html  entry.html  error.html  feed.xml  index.html  robots.txt  style.css  submit.html
(+4 files in other folders)
