[tool.poetry]
name = "novembeat.com"
version = "0.1.0"
description = ""
authors = ["fluffy <fluffy@beesbuzz.biz>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
Pushl = "^0.3.0"
python-memcached = "^1.59"
flask-hookserver = "^1.1.0"
publ = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
