[tool.poetry]
name = "novembeat.com"
version = "0.1.0"
description = ""
authors = ["fluffy <fluffy@beesbuzz.biz>"]

[tool.poetry.dependencies]
python = "^3.8.1"
gunicorn = "^22.0.0"
Pushl = "^0.3.0"
python-memcached = "^1.59"
publ = {version="^0.7.2", extras=["auth"]}
requests = "^2.32.0"
flask-github-webhook = "^0.2.0"


[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
pylint = "^2.15.5"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
